Change About section title to use feminine form

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="about__info">
                         <span class="section__subtitle" data-i18n="about.subtitle">Sobre o Artista</span>
-                        <h2 class="section__title" data-i18n="about.title">Olá, sou o criador da okapadesign</h2>
+                        <h2 class="section__title" data-i18n="about.title">Olá, sou a criadora da okapadesign</h2>
                         <p data-i18n="about.desc1">A minha jornada artística combina a paixão por pinturas tradicionais
                             com design digital
                             moderno.</p>
