--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
         "priceRange": "€€"
     }
     </script>
+    <!-- Structured Data - BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://okapadesign.com/"},
+            {"@type": "ListItem", "position": 2, "name": "Loja", "item": "https://okapadesign.com/#shop"}
+        ]
+    }
+    </script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -134,14 +145,22 @@
             <button class="nav__toggle" id="nav-toggle">☰</button>
         </nav>
     </header>
+    <!-- Breadcrumbs -->
+    <nav class="breadcrumbs" aria-label="breadcrumb">
+        <ul>
+            <li><a href="/" data-i18n="nav.home">Início</a></li>
+            <li aria-current="page">Loja</li>
+        </ul>
+    </nav>
 
     <main class="main">
         <section class="hero" id="home">
             <div class="hero__bg"></div>
             <div class="hero__content container">
                 <span class="hero__subtitle" data-i18n="hero.subtitle">Pinturas Originais & Arte Digital</span>
-                <h1 class="hero__title"><span data-i18n="hero.title">Arte é para</span> <span class="text-accent"
-                        data-i18n="hero.title_accent">todos</span></h1>
+                <h1 class="hero__title" data-i18n="hero.title">Arte é para <span class="text-accent">todos</span></h1>
+                <span data-i18n="hero.title">Arte é para</span> <span class="text-accent"
+                    data-i18n="hero.title_accent">todos</span></h1>
                 <p class="hero__description" data-i18n="hero.desc">Quadros únicos e designs de lettering para t-shirts,
                     garrafas térmicas e muito mais.</p>
                 <div class="hero__buttons">
