Admin UI Fix: Adjust column widths to bring description left

--- a/admin.html
+++ b/admin.html
@@ -468,8 +468,8 @@
                         <thead>
                             <tr>
                                 <th style="width: 60px;">Imagem</th>
-                                <th>Título</th>
-                                <th style="width: 35%;">Descrição</th>
+                                <th style="width: 250px;">Título</th>
+                                <th>Descrição</th>
                                 <th style="width: 100px;">Categoria</th>
                                 <th style="width: 80px;">Preço</th>
                                 <th style="width: 100px;">Ações</th>
