SEO Optimization: Convert SPA to Multi-Page Architecture
- Fixed sitemap.xml to remove URL fragments (#shop, #about, #contact)
- Created dedicated pages: shop.html, about.html, contact.html
- Added rich SEO content with proper meta tags and structured data
- Updated navigation links from fragments to actual pages
- Added category descriptions, FAQs, and detailed content for indexing
- Implemented Person, CollectionPage, and ContactPage schema markup

Resolves Google Search Console issues:
- Low indexation rate (was 1/3 pages)
- URL fragments not indexable by Google
- Insufficient crawlable content

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <a href="#" class="nav__logo">okapadesign</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li><a href="#home" class="nav__link active" data-i18n="nav.home">Início</a></li>
-                    <li><a href="#shop" class="nav__link" data-i18n="nav.shop">Loja</a></li>
-                    <li><a href="#about" class="nav__link" data-i18n="nav.about">Sobre</a></li>
-                    <li><a href="#contact" class="nav__link" data-i18n="nav.contact">Contato</a></li>
+                    <li><a href="index.html" class="nav__link active" data-i18n="nav.home">Início</a></li>
+                    <li><a href="shop.html" class="nav__link" data-i18n="nav.shop">Loja</a></li>
+                    <li><a href="about.html" class="nav__link" data-i18n="nav.about">Sobre</a></li>
+                    <li><a href="contact.html" class="nav__link" data-i18n="nav.contact">Contato</a></li>
                 </ul>
                 <button class="nav__close" id="nav-close">✕</button>
             </div>
@@ -164,8 +164,8 @@
                 <p class="hero__description" data-i18n="hero.desc">Quadros únicos e designs de lettering para t-shirts,
                     garrafas térmicas e muito mais.</p>
                 <div class="hero__buttons">
-                    <a href="#shop" class="btn btn--primary" data-i18n="hero.btn_shop">Ver Loja</a>
-                    <a href="#about" class="btn btn--outline" data-i18n="hero.btn_about">Sobre Mim</a>
+                    <a href="shop.html" class="btn btn--primary" data-i18n="hero.btn_shop">Ver Loja</a>
+                    <a href="about.html" class="btn btn--outline" data-i18n="hero.btn_about">Sobre Mim</a>
                 </div>
             </div>
             <div class="hero__scroll"><span>Scroll</span>
@@ -288,10 +288,10 @@
                     <p data-i18n="footer.tagline">Pinturas e arte digital para seu espaço e estilo.</p>
                 </div>
                 <div class="footer__links">
-                    <a href="#home" data-i18n="nav.home">Início</a>
-                    <a href="#shop" data-i18n="nav.shop">Loja</a>
-                    <a href="#about" data-i18n="nav.about">Sobre</a>
-                    <a href="#contact" data-i18n="nav.contact">Contato</a>
+                    <a href="index.html" data-i18n="nav.home">Início</a>
+                    <a href="shop.html" data-i18n="nav.shop">Loja</a>
+                    <a href="about.html" data-i18n="nav.about">Sobre</a>
+                    <a href="contact.html" data-i18n="nav.contact">Contato</a>
                 </div>
             </div>
             <div class="footer__bottom">
