Complete social media & LLM optimization for all pages
- Added enhanced meta tags to index.html, about.html, contact.html
- Pinterest, LinkedIn, WhatsApp/Telegram specific tags
- AI assistant meta tags for all pages
- Profile metadata for about.html
- Consistent social media optimization across entire site

--- a/about.html
+++ b/about.html
@@ -42,6 +42,36 @@
     <meta name="twitter:title" content="Sobre OkapaDesign | Cláudia Nunes">
     <meta name="twitter:description" content="Conheça a artista Cláudia Nunes e o estúdio OkapaDesign em Lisboa.">
     <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:creator" content="@okapadesign">
+    <meta name="twitter:site" content="@okapadesign">
+
+    <!-- Pinterest -->
+    <meta name="pinterest:title" content="Sobre Cláudia Nunes | OkapaDesign">
+    <meta name="pinterest:description"
+        content="Artista multidisciplinar em Lisboa - Pintura, design digital, web design e música eletrónica">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:see_also" content="https://pinterest.com/okapadesign">
+
+    <!-- LinkedIn -->
+    <meta property="og:article:author" content="Cláudia Nunes">
+    <meta property="og:article:section" content="Arte e Design">
+    <meta property="profile:first_name" content="Cláudia">
+    <meta property="profile:last_name" content="Nunes">
+    <meta property="profile:username" content="okapadesign">
+
+    <!-- WhatsApp / Telegram -->
+    <meta property="og:image:alt" content="Cláudia Nunes - Artista e Designer da OkapaDesign em Lisboa">
+
+    <!-- AI Assistant Meta Tags -->
+    <meta name="ai:type" content="person">
+    <meta name="ai:category" content="artist, designer, musician">
+    <meta name="ai:specialties"
+        content="painting, digital art, graphic design, web design, architecture, electronic music">
+    <meta name="ai:location" content="Lisbon, Portugal">
+    <meta name="ai:contact" content="okapadesign@gmail.com">
+    <meta name="ai:aka" content="claudias4U, KlaudIAmusicrave">
+    <meta name="ai:founded" content="2021">
+    <meta name="ai:services-available" content="custom paintings, branding, web design, music composition">
 
     <!-- Structured Data - Person/Artist -->
     <script type="application/ld+json">
