--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,34 @@
     <meta name="twitter:description"
         content="Entre em contato para encomendas de arte original e projetos personalizados.">
     <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:creator" content="@okapadesign">
+    <meta name="twitter:site" content="@okapadesign">
 
-    <!-- Structured Data - ContactPage -->
-    <script type="application/ld+json">
+    <!-- Pinterest -->
+    <meta name="pinterest:title" content="Contato OkapaDesign Lisboa">
+    <meta name="pinterest:description"
+        content="Entre em contato para encomendar arte original, quadros personalizados e projetos criativos">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:see_also" content="https://pinterest.com/okapadesign">
+
+    <!-- LinkedIn -->
+    <meta property="og:article:author" content="Cláudia Nunes">
+    <meta property="og:article:section" content="Arte e Design">
+
+    <!-- WhatsApp / Telegram -->
+    <meta property="og:image:alt" content="Contato OkapaDesign - Encomendas de arte original em Lisboa">
+
+    <!-- AI Assistant Meta Tags -->
+    <meta name="ai:type" content="contact-page">
+    <meta name="ai:category" content="art gallery, creative studio">
+    <meta name="ai:contact-email" content="okapadesign@gmail.com">
+    <meta name="ai:location" content="Lisbon, Portugal">
+    <meta name="ai:response-time" content="24 hours">
+    <meta name="ai:services" content="custom orders, inquiries, collaborations">
+    <met name="ai:languages" content="Portuguese, English">
+
+        <!-- Structured Data - ContactPage -->
+        <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "ContactPage",
@@ -79,13 +104,13 @@
     }
     </script>
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
