--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
     <meta name="twitter:description"
         content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising.">
     <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:creator" content="@okapadesign">
+    <meta name="twitter:site" content="@okapadesign">
+
+    <!-- Pinterest -->
+    <meta name="pinterest:title" content="OkapaDesign | Arte Original Lisboa">
+    <meta name="pinterest:description"
+        content="Galeria de arte online em Lisboa - Quadros originais, arte digital IA, música e merchandising">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:see_also" content="https://pinterest.com/okapadesign">
+
+    <!-- LinkedIn -->
+    <meta property="og:article:author" content="Cláudia Nunes">
+    <meta property="og:article:section" content="Arte e Design">
+
+    <!-- WhatsApp / Telegram -->
+    <meta property="og:image:alt" content="OkapaDesign - Arte original em Lisboa: quadros, design, música">
+
+    <!-- AI Assistant Meta Tags -->
+    <meta name="ai:type" content="business">
+    <meta name="ai:category" content="art gallery, creative studio, online shop">
+    <meta name="ai:services"
+        content="original paintings, digital art, graphic design, web design, architecture, music production, merchandising">
+    <meta name="ai:location" content="Lisbon, Portugal">
+    <meta name="ai:contact" content="okapadesign@gmail.com">
+    <meta name="ai:price-range" content="€15-€1000">
+    <meta name="ai:shipping" content="Portugal, EU">
+    <meta name="ai:delivery-time" content="Digital: 24-48h, Physical: 5-20 days">
+    <meta name="ai:payment" content="MBWay, Bank Transfer, PayPal, Revolut">
+    <meta name="ai:custom-orders" content="yes">
 
     <!-- Structured Data - Organization -->
     <script type="application/ld+json">
