VIRAL OPTIMIZATION 🔥 Custom OG images + optimized titles
- Created 4 custom Open Graph images for better social sharing
- Homepage: Professional branding with gold accents
- Shop: Eye-catching CTA with pricing (desde €400)
- About: Artist profile with specialties highlighted
- Contact: Engaging CTA (Vamos Conversar + 24h response)

- Updated OG titles with emojis and compelling copy
- Titles now 60-75 characters for optimal social display
- Added pricing info to shop OG title for conversion
- Each page has unique custom OG image

Result: Dramatically improved social media previews = more clicks!

--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="profile">
     <meta property="og:url" content="https://okapadesign.com/about.html">
-    <meta property="og:title" content="Sobre OkapaDesign | Cláudia Nunes - Artista Lisboa">
+    <meta property="og:title" content="Conheça Cláudia Nunes, Artista Multidisciplinar | OkapaDesign Lisboa 🎨">
     <meta property="og:description"
         content="Conheça a artista Cláudia Nunes e o estúdio OkapaDesign. Arte com alma em Lisboa desde 2021.">
-    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-about.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="538">
     <meta property="og:locale" content="pt_PT">
@@ -41,7 +41,7 @@
     <meta name="twitter:url" content="https://okapadesign.com/about.html">
     <meta name="twitter:title" content="Sobre OkapaDesign | Cláudia Nunes">
     <meta name="twitter:description" content="Conheça a artista Cláudia Nunes e o estúdio OkapaDesign em Lisboa.">
-    <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://okapadesign.com/assets/og-about.png">
     <meta name="twitter:creator" content="@okapadesign">
     <meta name="twitter:site" content="@okapadesign">
 
@@ -49,7 +49,7 @@
     <meta name="pinterest:title" content="Sobre Cláudia Nunes | OkapaDesign">
     <meta name="pinterest:description"
         content="Artista multidisciplinar em Lisboa - Pintura, design digital, web design e música eletrónica">
-    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-about.png">
     <meta property="og:see_also" content="https://pinterest.com/okapadesign">
 
     <!-- LinkedIn -->
