--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://okapadesign.com/">
-    <meta property="og:title" content="OkapaDesign | Arte Original & Design Criativo | Lisboa">
+    <meta property="og:title" content="OkapaDesign Lisboa | Arte Original, Design Gráfico & Música Independente ✨">
     <meta property="og:description"
         content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising. Encomendas personalizadas em Lisboa.">
-    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-homepage.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="538">
     <meta property="og:locale" content="pt_PT">
@@ -42,7 +42,7 @@
     <meta name="twitter:title" content="OkapaDesign | Arte Original & Design Criativo">
     <meta name="twitter:description"
         content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising.">
-    <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://okapadesign.com/assets/og-homepage.png">
     <meta name="twitter:creator" content="@okapadesign">
     <meta name="twitter:site" content="@okapadesign">
 
@@ -50,7 +50,7 @@
     <meta name="pinterest:title" content="OkapaDesign | Arte Original Lisboa">
     <meta name="pinterest:description"
         content="Galeria de arte online em Lisboa - Quadros originais, arte digital IA, música e merchandising">
-    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-homepage.png">
     <meta property="og:see_also" content="https://pinterest.com/okapadesign">
 
     <!-- LinkedIn -->
