--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://okapadesign.com/contact.html">
-    <meta property="og:title" content="Contato | OkapaDesign Lisboa">
+    <meta property="og:title" content="Faça sua Encomenda Personalizada | Resposta em 24h | OkapaDesign ✉️">
     <meta property="og:description"
         content="Encomende arte original ou entre em contato para projetos personalizados. Resposta em 24h.">
-    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-contact.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="538">
     <meta property="og:locale" content="pt_PT">
@@ -42,7 +42,7 @@
     <meta name="twitter:title" content="Contato | OkapaDesign">
     <meta name="twitter:description"
         content="Entre em contato para encomendas de arte original e projetos personalizados.">
-    <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://okapadesign.com/assets/og-contact.png">
     <meta name="twitter:creator" content="@okapadesign">
     <meta name="twitter:site" content="@okapadesign">
 
@@ -50,7 +50,7 @@
     <meta name="pinterest:title" content="Contato OkapaDesign Lisboa">
     <meta name="pinterest:description"
         content="Entre em contato para encomendar arte original, quadros personalizados e projetos criativos">
-    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-contact.png">
     <meta property="og:see_also" content="https://pinterest.com/okapadesign">
 
     <!-- LinkedIn -->
