--- a/shop.html
+++ b/shop.html
@@ -26,10 +26,10 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://okapadesign.com/shop.html">
-    <meta property="og:title" content="Loja de Arte Original | OkapaDesign Lisboa">
+    <meta property="og:title" content="Compre Arte Original Online | Quadros desde €400 | OkapaDesign Lisboa 🎨">
     <meta property="og:description"
         content="Compre arte original: quadros únicos, arte digital IA, música independente e merchandising. Envio Portugal e Europa.">
-    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-shop.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="538">
     <meta property="og:locale" content="pt_PT">
@@ -42,7 +42,7 @@
     <meta name="twitter:title" content="Loja de Arte Original | OkapaDesign">
     <meta name="twitter:description"
         content="Compre arte original: quadros únicos, arte digital IA, música independente e merchandising.">
-    <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://okapadesign.com/assets/og-shop.png">
     <meta name="twitter:creator" content="@okapadesign">
     <meta name="twitter:site" content="@okapadesign">
 
@@ -50,7 +50,7 @@
     <meta name="pinterest:title" content="Loja de Arte Original | OkapaDesign Lisboa">
     <meta name="pinterest:description"
         content="Compre arte original em Lisboa - Quadros únicos, arte digital IA, música e merchandising">
-    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="pinterest:image" content="https://okapadesign.com/assets/og-shop.png">
     <meta property="og:see_also" content="https://pinterest.com/okapadesign">
 
     <!-- LinkedIn -->
